[gd_scene load_steps=4 format=2]

[ext_resource path="res://material_maker/windows/preferences/bool_option.tscn" type="PackedScene" id=1]
[ext_resource path="res://material_maker/windows/preferences/preferences.gd" type="Script" id=2]
[ext_resource path="res://material_maker/windows/preferences/float_option.tscn" type="PackedScene" id=3]

[node name="Preferences" type="WindowDialog"]
anchor_left = 0.377
anchor_top = 0.383
anchor_right = 0.601
anchor_bottom = 0.619
margin_left = 0.440002
margin_top = 0.240021
margin_right = -0.280029
margin_bottom = 0.319977
popup_exclusive = true
window_title = "Preferences"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 286.0
margin_bottom = 142.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmQuit" parent="VBoxContainer/VBoxContainer2" instance=ExtResource( 1 )]
margin_right = 286.0
config_variable = "confirm_quit"

[node name="ConfirmCloseProject" parent="VBoxContainer/VBoxContainer2" instance=ExtResource( 1 )]
margin_top = 28.0
margin_right = 286.0
margin_bottom = 52.0
text = "Confirm when closing a project"
config_variable = "confirm_close_project"

[node name="Space1" type="Control" parent="VBoxContainer/VBoxContainer2"]
margin_top = 56.0
margin_right = 286.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 10 )

[node name="GuiScale" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
margin_top = 70.0
margin_right = 286.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/GuiScale"]
margin_top = 5.0
margin_right = 116.0
margin_bottom = 19.0
text = " UI Scale (0=auto):"

[node name="GuiScale" parent="VBoxContainer/VBoxContainer2/GuiScale" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_right = 178.0
margin_bottom = 24.0
value = 0.0
max_value = 2.0
step = 0.01
float_only = true
config_variable = "ui_scale"

[node name="Space2" type="Control" parent="VBoxContainer/VBoxContainer2"]
margin_top = 98.0
margin_right = 286.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 10 )

[node name="EnableVSync" parent="VBoxContainer/VBoxContainer2" instance=ExtResource( 1 )]
margin_top = 112.0
margin_right = 286.0
margin_bottom = 136.0
text = "Enable VSync"
config_variable = "vsync"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 286.0
margin_bottom = 146.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 98.0
margin_top = 150.0
margin_right = 286.0
margin_bottom = 170.0
size_flags_horizontal = 8

[node name="Apply" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
text = "Apply"

[node name="OK" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
text = "OK"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
text = "Cancel"

[connection signal="popup_hide" from="." to="." method="queue_free"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Apply" to="." method="_on_Apply_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
